--- a/Project/Simple.storyboard
+++ b/Project/Simple.storyboard
@@ -54,7 +54,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xsZ-e8-ZF9" customClass="BackgroundFilledButton" customModule="Game_Flow" customModuleProvider="target">
                                         <rect key="frame" x="154" y="237" width="146" height="50"/>
                                         <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="End Turn Lose">
+                                        <state key="normal" title="End Game Lose">
                                             <color key="titleColor" name="Storefront Light"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -141,7 +141,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7eX-kc-a9s" customClass="BackgroundFilledButton" customModule="Game_Flow" customModuleProvider="target">
                                         <rect key="frame" x="154" y="294" width="146" height="50"/>
                                         <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" title="End Turn Win">
+                                        <state key="normal" title="End Game Win">
                                             <color key="titleColor" name="Storefront Light"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
